added log and up routes for remote server checking

--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Legend PushIt Notification System</title>
+  <title>PushyBoi</title>
 </head>
 
 <body>
-  <h1>Legend PushIt Notification System</h1>
-  <img src="https://www.legendwebworks.com/layout/images/logo.png?m=1540230787" alt="">
+  <h1>PushyBoi Notification System</h1>
+  <img src="http://media0.giphy.com/media/b53zum5Z3BhgQ/giphy.gif" alt="">
+  
   <br>
   <button id='butt'>click to subscribe</button>
   <script src="client.js"></script>
